# imgview2

./: CMakeLists.txt  README.md  meson.build  nvim-cc.txt
src/: argparse.cpp  argparse.h  event.h  image.h  magician.h  main.cpp  state.cpp  state.h  stateman.cpp  stateman.h  window.cpp  window.h
